--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   scan:
     runs-on: ubuntu-latest
+    timeout-minutes: 20
     steps:
       - uses: actions/checkout@v4
 
@@ -23,6 +24,8 @@ jobs:
         run: python rfp_scanner.py
         env:
           SAM_API_KEY: ${{ secrets.SAM_API_KEY }}
+          DOFFIN_API_KEY: ${{ secrets.DOFFIN_API_KEY }}
+          HILMA_API_KEY: ${{ secrets.HILMA_API_KEY }}
 
       - name: Send digest
         run: python send_digest.py
