--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -18,7 +18,7 @@ jobs:
           python-version: '3.11'
 
       - name: Install dependencies
-        run: pip install requests beautifulsoup4 lxml
+        run: pip install requests beautifulsoup4 lxml pdfplumber
 
       - name: Run scanner
         run: python rfp_scanner.py
@@ -40,6 +40,6 @@ jobs:
         run: |
           git config user.name "RFP Scanner Bot"
           git config user.email "bot@climateview.global"
-          git add rfp_data.json .digest_last_run
+          git add rfp_data.json .digest_last_run portal_health.json scan_log.json
           git diff --cached --quiet || git commit -m "Auto-update RFP data $(date +%Y-%m-%d)"
           git push
